fixes vertical spacing on shows page

--- a/public/stylesheets/sass/pages/shows.scss
+++ b/public/stylesheets/sass/pages/shows.scss
@@ -8,6 +8,7 @@
       .venue,
       p.date {
         float: left;
+        margin-bottom:0px;
       }
       .band {
         margin-right: 3px;
@@ -18,6 +19,13 @@
       p.date {
         margin-bottom: 0px;
         margin-top: 3px;
+      }
+      h3 {
+        margin-bottom:3px;
+      }
+      ul li {
+        padding-bottom:0px;
+        margin-bottom:5px;
       }
     }
   }
